5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1716_2498.log
== SUBMITION (2019-06-09 15:06:48) 
-- CODE:
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
cpa = float(input("Crescimento populacional da cidade A: "))
cpb = float(input("Crescimento populacional da cidade B: "))
soma = 0
while(ha < hb):
	a = (ha * (cpa/100)) + a
	b = (hb * (cpb/100)) + b
	soma = soma + 1
print(soma)	
-- EXECUTION TIME:
0.82589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 7, in <module>
    a = (ha * (cpa/100)) + a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:07:23) 
-- CODE:
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
cpa = float(input("Crescimento populacional da cidade A: "))
cpb = float(input("Crescimento populacional da cidade B: "))
soma = 0
while(ha < hb and cpa > cpb):
	a = (ha * (cpa/100)) + a
	b = (hb * (cpb/100)) + b
	soma = soma + 1
print(soma)	
-- EXECUTION TIME:
0.715318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2498/main.py", line 7, in <module>
    a = (ha * (cpa/100)) + a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:08:29) 
-- CODE:
a = int(input("Numero de habitantes de uma cidade A: "))
b = int(input("Numero de habitantes de uma cidade B: "))
cpa = float(input("Crescimento populacional da cidade A: "))
cpb = float(input("Crescimento populacional da cidade B: "))
soma = 0
while(a < b and cpa > cpb):
	a = (a * (cpa/100)) + a
	b = (b * (cpb/100)) + b
	soma = soma + 1
print(soma)	
-- EXECUTION TIME:
0.72789
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
Numero de habitantes de uma cidade A: Numero de habitantes de uma cidade B: Crescimento populacional da cidade A: Crescimento populacional da cidade B: 45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
Numero de habitantes de uma cidade A: Numero de habitantes de uma cidade B: Crescimento populacional da cidade A: Crescimento populacional da cidade B: 6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:10:23) 
-- CODE:
a = int(input("Numero de habitantes de uma cidade A: "))
b = int(input("Numero de habitantes de uma cidade B: "))
cpa = float(input("Crescimento populacional da cidade A: "))
cpb = float(input("Crescimento populacional da cidade B: "))

soma = 0
while(a < b and cpa > cpb):
	a = (a * (cpa/100)) + a
	b = (b * (cpb/100)) + b
	soma = soma + 1
print(soma)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:11:00) 
-- CODE:
a = int(input("Numero de habitantes de uma cidade A: "))
b = int(input("Numero de habitantes de uma cidade B: "))
cpa = float(input("Crescimento populacional da cidade A: "))
cpb = float(input("Crescimento populacional da cidade B: "))

soma = 0
while(a < b and cpa > cpb):
	a = (a * (cpa/100)) + a
	b = (b * (cpb/100)) + b
	soma = soma + 1
print(soma)	
-- EXECUTION TIME:
0.728482
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
